--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,28 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -31,17 +21,13 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      # Runs a single command using the runners shell
       - name: Compile maven
         run: mvn clean compile
 
   checkstyle:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -49,38 +35,31 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      # Runs a single command using the runners shell
       - name: Checkstyle code
         run: mvn checkstyle:check
 
   tests:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: build
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
-          
-      # Runs a single command using the runners shell
+
       - name: Run tests
         run: mvn clean install
 
 
   deploy:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: tests
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
+    
       - name: Deploy
         run: echo hello!
