--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "task_one" ]
 
   workflow_dispatch:
 
@@ -60,6 +60,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-    
+
       - name: Deploy
         run: echo hello!
