--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,7 @@ jobs:
 
   checkstyle:
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - uses: actions/checkout@v3
@@ -40,7 +41,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: checkstyle
 
     steps:
       - uses: actions/checkout@v3
