--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
 
   checkstyle:
     runs-on: ubuntu-latest
-    needs: build
+#    needs: build
 
     steps:
       - uses: actions/checkout@v3
@@ -41,7 +41,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
-    needs: checkstyle
+#    needs: build
 
     steps:
       - uses: actions/checkout@v3
@@ -50,6 +50,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
+      - uses: madrapps/jacoco-report@v1.2
+        with:
+          paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 50
+
 
       - name: Run tests
         run: mvn clean install
