--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,7 +50,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
-
+      - name: Run Coverage
+        run: |
+          chmod +x gradlew
+          ./gradlew testCoverage
       - name: Run tests
         run: mvn clean install
       - uses: madrapps/jacoco-report@v1.2
