--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -26,11 +28,14 @@ jobs:
 
   checkstyle:
     runs-on: ubuntu-latest
-#    needs: build
+    needs: build
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -41,18 +46,24 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
-#    needs: build
+    needs: checkstyle
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
+
       - name: Run tests
         run: mvn clean install
-      - uses: madrapps/jacoco-report@v1.6.1
+
+      - name: Generate Report
+        uses: madrapps/jacoco-report@v1.6.1
         with:
           paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -62,6 +73,8 @@ jobs:
   deploy:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    needs: tests
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
