--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
           token: ${{ secrets.GITHUB_TOKEN }}
-#          min-coverage-overall: 50
+          min-coverage-overall: 50
 
 
   deploy:
