failure checkstyle on warn

--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,9 @@
           <configLocation>google_checks.xml</configLocation>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
+          <linkXRef>false</linkXRef>
+          <failOnViolation>true</failOnViolation>
+          <violationSeverity>warning</violationSeverity>
         </configuration>
         <executions>
           <execution>
