--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,22 @@ version: '3.5'
 
 services:
 
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prom_data:/prometheus
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+
   minio:
     image: minio/minio:latest
     container_name: minio
@@ -69,3 +85,7 @@ services:
       KAFKA_BROKER_ID: 3
     depends_on:
       - zookeeper
+
+
+volumes:
+  prom_data:
