--- a/filter_two/src/main/resources/application.properties
+++ b/filter_two/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082
 spring.application.name=filter_two
 spring.datasource.url=jdbc:postgresql://localhost:35432/image_project
 spring.datasource.username=postgres
@@ -20,3 +21,5 @@ kafka.replicas=3
 kafka.group-id=custom-group-id2
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=manual
+management.endpoints.web.exposure.include=prometheus
+management.prometheus.metrics.export.enabled=true
