--- a/imagga_filter/src/main/resources/application.properties
+++ b/imagga_filter/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8086
 spring.application.name=imagga_filter
 spring.datasource.url=jdbc:postgresql://localhost:15433/image_project
 spring.datasource.username=postgres
@@ -25,3 +26,5 @@ spring.data.redis.port=6379
 spring.data.redis.password=12345
 settings.immaga.apikey=acc_36426ea6721888d
 settings.immaga.secret=a99273c8b21c1c5741ad04b6cec7732a
+management.endpoints.web.exposure.include=prometheus
+management.prometheus.metrics.export.enabled=true
