--- a/filter_four/src/main/resources/application.properties
+++ b/filter_four/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8084
 spring.application.name=filter_four
 spring.datasource.url=jdbc:postgresql://localhost:55432/image_project
 spring.datasource.username=postgres
@@ -20,3 +21,5 @@ kafka.replicas=3
 kafka.group-id=custom-group-id4
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=manual
+management.endpoints.web.exposure.include=prometheus
+management.prometheus.metrics.export.enabled=true
