--- a/filter_three/src/main/resources/application.properties
+++ b/filter_three/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8083
 spring.application.name=filter_three
 spring.datasource.url=jdbc:postgresql://localhost:45432/image_project
 spring.datasource.username=postgres
@@ -21,3 +22,5 @@ kafka.replicas=3
 kafka.group-id=custom-group-id3
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=manual
+management.endpoints.web.exposure.include=prometheus
+management.prometheus.metrics.export.enabled=true
