--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,4 +5,4 @@ scrape_configs:
   - job_name: 'api'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: [ 'host.docker.internal:8080' ]
+      - targets: [ 'host.docker.internal:8080', 'host.docker.internal:8081', 'host.docker.internal:8082', 'host.docker.internal:8083', 'host.docker.internal:8084', 'host.docker.internal:8085', 'host.docker.internal:8086' ]
