--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -2,21 +2,21 @@ version: '3.5'
 
 services:
 
-#  java_app:
-#    image: project:0.0.1
-#    container_name: java_app
-#    build:
-#      context: ./api
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres/image_project
-#      - SPRING_DATASOURCE_USERNAME=postgres
-#      - SPRING_DATASOURCE_PASSWORD=postgres
-#      - MINIO_URL=http://127.0.0.1:9000
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - postgres
-#    restart: unless-stopped
+  java_app:
+    image: project:0.0.1
+    container_name: java_app
+    build:
+      context: ./api
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres/image_project
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+      - MINIO_URL=http://127.0.0.1:9000
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    restart: unless-stopped
 
   postgres:
     image: postgres:14-alpine3.18
@@ -33,4 +33,3 @@ services:
 
 volumes:
   app_db:
-  prom_data:
